source/demyo-web/src/main/webapp/css/demyo/demyo.common.less
// TODO: Find a way to hide the date placeholder text on Chrome, when the field is not focused

@import (reference) "demyo-icons-variables.less";
@import "demyo.mixins.less";

a {
	color: inherit;
	text-decoration: none;
	&:hover {
		text-decoration: underline;
		color: @color-accent;
	}
	
	&.mdl-button:hover {
		/* Special override */
		text-decoration: none;
	}
	
	&.dem-user-provided {
		color: @color-accent;
	}
}

.dem-widget {
	width: auto;
	
	.mdl-textfield {
		display: block;
		width: auto;
	}
}

.dico-stack {
	position: relative;
	
	.dico-overlay {
		margin: 0;
		position: absolute;
		top: 0;
		right: 0.5em;
		font-size: 50%;
	    text-shadow: -1px -1px #fff, 0px -1px #fff, 1px -1px #fff, -1px 1px #fff, 0px 1px #fff, 1px 1px #fff;
	}
}

.dico-placeholder {
	display: inline-block;
	width: 1em;
}

/* Override to have larger fields */
.dem-model-form .mdl-textfield {
	width: 100%;
}

.dem-tag-index {
	text-align: center;
	
	.dem-tag {
		line-height: 180%;
	}
}

a.dem-tag:hover {
	text-decoration:none;
	
	.dem-tag__name {
		text-decoration: underline;
	}
}
.dem-tag {
	border-top-left-radius: 5px;
	border-bottom-right-radius: 5px;
	background-color: @color-background-light-highlight;
	margin-right: 1em;
	padding: 4px 12px;
	white-space: nowrap;
	font-size: 14px;
	
	&__count {
		font-size: 9pt;
		&:before {
			content: '(';
			margin-left: 0.5em;
		}
		&:after {
			content: ')';
		}
	}
}

.dem-hidden {
	display: none;
}

figure.thumb {
	margin: 8px;
}

.dem-thumb-legend {
	margin-top: 0.5em;
	font-size: 10pt;
	position: relative;
	
	p {
		margin: 0;
		font-size: inherit;
	}
	
	&__expander {
		position: absolute;
		top: 0;
		right: 0;
		opacity: 0.75;
		transition: opacity 0.3s;
		
		&:hover {
			opacity: 1;
		}
	}
}

.dem-exception-message {
	color: red;
	font-family: monospace, sans-serif;;;;;;;;
}

.model-identification {
	float: right;
	margin-right: 0;
	
	@media (max-width: @tablet-breakpoint-exclusive) {
		float: none;
		text-align: center;
	}
}

#widgets .mdl-card__supporting-text {
	color: inherit; /* Don't have that excessively white shade of grey */
}

@import "demyo.layout.less";
@import "demyo.forms.less";
@import "demyo.cards.less";
@import "demyo.chosen.less";
@import "demyo.model.less";

